# beater

./: .gitignore  CMakeLists.txt  PHASE1_STATUS.md  PROJECT_PLAN.md  README.md
resources/: beater.desktop  resources.qrc
src/: CMakeLists.txt
src/app/: Main.cpp  TestAudio.cpp  TestPattern.cpp  TestTimeline.cpp
src/domain/: Instrument.cpp  Instrument.hpp  MeterMap.cpp  MeterMap.hpp  Pattern.cpp  Pattern.hpp  Project.cpp  Project.hpp  Region.cpp  Region.hpp  TempoMap.cpp  TempoMap.hpp  TimeTypes.cpp  TimeTypes.hpp  Track.cpp  Track.hpp
src/engine/: Engine.cpp  Engine.hpp  JackAudioBackend.cpp  JackAudioBackend.hpp  SampleLibrary.cpp  SampleLibrary.hpp  Sampler.cpp  Sampler.hpp  Scheduler.cpp  Scheduler.hpp  Transport.cpp  Transport.hpp
src/serialization/: ProjectSerializer.cpp  ProjectSerializer.hpp
src/ui/: InstrumentPanel.cpp  InstrumentPanel.hpp  MainWindow.cpp  MainWindow.hpp  PatternPalette.cpp  PatternPalette.hpp  TimelineView.cpp  TimelineView.hpp  TimelineWidget.cpp  TimelineWidget.hpp
tests/: CMakeLists.txt  test_Pattern.cpp  test_TimeUtils.cpp  test_Track.cpp
